# AI-Memory-plugin

./: .gitignore  README.md  pyproject.toml  test_e2e.py
Skills/ai-memory/: SKILL.md  install.sh
adapters/: __init__.py  base.py  langchain.py
docs/: CHROMADB_SETUP.md  E2E_TEST.md  MEMORY_INSTRUCTIONS.md  MIGRATION.md  README.md  USAGE.md
docs/plans/: 2026-02-05-ai-memory-plugin-design.md  2026-02-05-ai-memory-plugin-implementation-plan.md  2026-02-05-ai-memory-plugin-upgrade-chromadb.md
examples/: README.md  agent_integration.py  basic_usage.py  langchain_example.py  openai_example.py  quickstart.py
scripts/: migrate_to_chroma.py
src/ai_memory/: __init__.py  cli.py
src/ai_memory/config/: __init__.py  settings.py
src/ai_memory/core/: __init__.py  exceptions.py  manager.py  types.py
src/ai_memory/embeddings/: __init__.py  base.py  local.py
src/ai_memory/retrieval/: __init__.py  hybrid_searcher.py  scorer.py
src/ai_memory/storage/: __init__.py  database.py  file_manager.py
src/ai_memory/sync/: __init__.py  indexer.py
src/ai_memory/tools/: __init__.py  functions.py  langchain.py  memory_tools.py  openai.py  system_prompt.py
src/ai_memory/vector/: __init__.py  base.py  chroma_provider.py  migration.py  sqlite_provider.py
tests/: conftest.py  test_compatibility.py  test_config.py  test_integration.py  test_manager.py  test_types.py
tests/test_embeddings/: __init__.py  test_local.py
tests/test_retrieval/: __init__.py  test_hybrid_searcher.py
tests/test_storage/: __init__.py  test_database.py  test_file_manager.py
tests/test_sync/: __init__.py  test_indexer.py
tests/test_vector/: __init__.py  test_chroma_provider.py  test_migration.py  test_sqlite_provider.py
