[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-memory"
version = "0.1.0"
description = "可插拔的 AI 记忆系统插件"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "watchfiles>=0.20.0",
    "chromadb>=0.4.0",  # 新增
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain>=0.1.0", "langchain-openai>=0.0.1"]
chromadb = ["chromadb>=0.4.0"]

[project.scripts]
test-e2e = "test_e2e:main"

[project.dev-dependencies]
pytest = ["pytest>=7.4.0"]
pytest-asyncio = ["pytest-asyncio>=0.21.0"]
pytest-cov = ["pytest-cov>=4.1.0"]
black = ["black>=23.0.0"]
ruff = ["ruff>=0.1.0"]
mypy = ["mypy>=1.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
